add user delete api
